--- a/notebooks/exploratory_analysis.ipynb
+++ b/notebooks/exploratory_analysis.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,9 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import tensorflow as tf\n"
+    "import tensorflow as tf\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "from sklearn.preprocessing import MinMaxScaler"
    ]
   },
   {
@@ -38,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -181,7 +183,7 @@
        "4       565.0       259.0         3.8462            342200.0        NEAR BAY  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +263,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +413,7 @@
        "4       565.0       259.0         3.8462            342200.0  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +594,7 @@
        "max         500001.000000  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -603,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +622,7 @@
        "        <Axes: title={'center': 'median_house_value'}>]], dtype=object)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -641,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +660,7 @@
        "Name: median_house_value, dtype: float64"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -678,7 +680,7 @@
        "<Axes: xlabel='median_house_value', ylabel='Count'>"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -706,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +789,7 @@
        "Name: median_house_value, dtype: float64"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -805,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -841,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -851,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1019,13 +1021,247 @@
        "max         500001.000000  "
       ]
      },
-     "execution_count": 67,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_numeric.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Encoder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "housing_cat = df[['ocean_proximity']].copy()\n",
+    "one_cat_encoder = OneHotEncoder(sparse_output=False)\n",
+    "housing_cat_encoded = one_cat_encoder.fit_transform(housing_cat)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "encoded_df = pd.DataFrame(housing_cat_encoded,\n",
+    "                          columns=one_cat_encoder.get_feature_names_out(['ocean_proximity']),\n",
+    "                          index=housing_cat.index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ocean_proximity_&lt;1H OCEAN</th>\n",
+       "      <th>ocean_proximity_INLAND</th>\n",
+       "      <th>ocean_proximity_NEAR BAY</th>\n",
+       "      <th>ocean_proximity_NEAR OCEAN</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20635</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20636</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20637</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20638</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20639</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>20635 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       ocean_proximity_<1H OCEAN  ocean_proximity_INLAND  \\\n",
+       "0                            0.0                     0.0   \n",
+       "1                            0.0                     0.0   \n",
+       "2                            0.0                     0.0   \n",
+       "3                            0.0                     0.0   \n",
+       "4                            0.0                     0.0   \n",
+       "...                          ...                     ...   \n",
+       "20635                        0.0                     1.0   \n",
+       "20636                        0.0                     1.0   \n",
+       "20637                        0.0                     1.0   \n",
+       "20638                        0.0                     1.0   \n",
+       "20639                        0.0                     1.0   \n",
+       "\n",
+       "       ocean_proximity_NEAR BAY  ocean_proximity_NEAR OCEAN  \n",
+       "0                           1.0                         0.0  \n",
+       "1                           1.0                         0.0  \n",
+       "2                           1.0                         0.0  \n",
+       "3                           1.0                         0.0  \n",
+       "4                           1.0                         0.0  \n",
+       "...                         ...                         ...  \n",
+       "20635                       0.0                         0.0  \n",
+       "20636                       0.0                         0.0  \n",
+       "20637                       0.0                         0.0  \n",
+       "20638                       0.0                         0.0  \n",
+       "20639                       0.0                         0.0  \n",
+       "\n",
+       "[20635 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "encoded_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_encoded = pd.concat([df.drop(['ocean_proximity'], axis=1), encoded_df], axis=1)\n",
+    "df_encoded.head(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Feature scaling and transformation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.57768924,  0.13496281,  0.56862745, ..., -1.        ,\n",
+       "         1.        , -1.        ],\n",
+       "       [-0.57569721,  0.13071201, -0.21568627, ..., -1.        ,\n",
+       "         1.        , -1.        ],\n",
+       "       [-0.57968127,  0.12858661,  1.        , ..., -1.        ,\n",
+       "         1.        , -1.        ],\n",
+       "       ...,\n",
+       "       [-0.37649402,  0.46439957, -0.37254902, ...,  1.        ,\n",
+       "        -1.        , -1.        ],\n",
+       "       [-0.39641434,  0.46439957, -0.33333333, ...,  1.        ,\n",
+       "        -1.        , -1.        ],\n",
+       "       [-0.38047809,  0.45164718, -0.41176471, ...,  1.        ,\n",
+       "        -1.        , -1.        ]])"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "min_min_max_scaler = MinMaxScaler(feature_range=(-1,1))\n",
+    "df_scaled = min_min_max_scaler.fit_transform(df_encoded)\n",
+    "df_scaled"
    ]
   }
  ],
