--- a/notebooks/exploratory_analysis.ipynb
+++ b/notebooks/exploratory_analysis.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1039,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1050,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1061,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1204,23 +1204,13 @@
        "[20635 rows x 4 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "encoded_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_encoded = pd.concat([df.drop(['ocean_proximity'], axis=1), encoded_df], axis=1)\n",
-    "df_encoded.head(5)"
    ]
   },
   {
@@ -1232,36 +1222,224 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[-0.57768924,  0.13496281,  0.56862745, ..., -1.        ,\n",
-       "         1.        , -1.        ],\n",
-       "       [-0.57569721,  0.13071201, -0.21568627, ..., -1.        ,\n",
-       "         1.        , -1.        ],\n",
-       "       [-0.57968127,  0.12858661,  1.        , ..., -1.        ,\n",
-       "         1.        , -1.        ],\n",
+       "array([[-0.57768924,  0.13496281,  0.56862745, ..., -0.95888834,\n",
+       "         0.07933684,  0.80453276],\n",
+       "       [-0.57569721,  0.13071201, -0.21568627, ..., -0.62604835,\n",
+       "         0.07605412,  0.41649313],\n",
+       "       [-0.57968127,  0.12858661,  1.        , ..., -0.94211478,\n",
+       "        -0.06794389,  0.39010148],\n",
        "       ...,\n",
-       "       [-0.37649402,  0.46439957, -0.37254902, ...,  1.        ,\n",
-       "        -1.        , -1.        ],\n",
-       "       [-0.39641434,  0.46439957, -0.33333333, ...,  1.        ,\n",
-       "        -1.        , -1.        ],\n",
-       "       [-0.38047809,  0.45164718, -0.41176471, ...,  1.        ,\n",
-       "        -1.        , -1.        ]])"
+       "       [-0.37649402,  0.46439957, -0.37254902, ..., -0.85791811,\n",
+       "        -0.83447125, -0.6812343 ],\n",
+       "       [-0.39641434,  0.46439957, -0.33333333, ..., -0.88554514,\n",
+       "        -0.8114095 , -0.71257438],\n",
+       "       [-0.38047809,  0.45164718, -0.41176471, ..., -0.82601546,\n",
+       "        -0.73949325, -0.69319302]])"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "min_min_max_scaler = MinMaxScaler(feature_range=(-1,1))\n",
-    "df_scaled = min_min_max_scaler.fit_transform(df_encoded)\n",
-    "df_scaled"
+    "df_scaled = min_min_max_scaler.fit_transform(df_numeric)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We have transform the numpy array to a dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_scaled = pd.DataFrame(df_scaled,columns=df_numeric.columns, index=df_numeric.index)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then we have to concat both arrays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>housing_median_age</th>\n",
+       "      <th>total_rooms</th>\n",
+       "      <th>total_bedrooms</th>\n",
+       "      <th>population</th>\n",
+       "      <th>households</th>\n",
+       "      <th>median_income</th>\n",
+       "      <th>median_house_value</th>\n",
+       "      <th>ocean_proximity_&lt;1H OCEAN</th>\n",
+       "      <th>ocean_proximity_INLAND</th>\n",
+       "      <th>ocean_proximity_NEAR BAY</th>\n",
+       "      <th>ocean_proximity_NEAR OCEAN</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-0.577689</td>\n",
+       "      <td>0.134963</td>\n",
+       "      <td>0.568627</td>\n",
+       "      <td>-0.955339</td>\n",
+       "      <td>-0.960273</td>\n",
+       "      <td>-0.982118</td>\n",
+       "      <td>-0.958888</td>\n",
+       "      <td>0.079337</td>\n",
+       "      <td>0.804533</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-0.575697</td>\n",
+       "      <td>0.130712</td>\n",
+       "      <td>-0.215686</td>\n",
+       "      <td>-0.638995</td>\n",
+       "      <td>-0.657045</td>\n",
+       "      <td>-0.865579</td>\n",
+       "      <td>-0.626048</td>\n",
+       "      <td>0.076054</td>\n",
+       "      <td>0.416493</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-0.579681</td>\n",
+       "      <td>0.128587</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.925479</td>\n",
+       "      <td>-0.941341</td>\n",
+       "      <td>-0.972365</td>\n",
+       "      <td>-0.942115</td>\n",
+       "      <td>-0.067944</td>\n",
+       "      <td>0.390101</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-0.581673</td>\n",
+       "      <td>0.128587</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.935297</td>\n",
+       "      <td>-0.927374</td>\n",
+       "      <td>-0.968889</td>\n",
+       "      <td>-0.928301</td>\n",
+       "      <td>-0.290603</td>\n",
+       "      <td>0.345566</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-0.581673</td>\n",
+       "      <td>0.128587</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.917341</td>\n",
+       "      <td>-0.913408</td>\n",
+       "      <td>-0.968497</td>\n",
+       "      <td>-0.915146</td>\n",
+       "      <td>-0.538448</td>\n",
+       "      <td>0.349277</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   longitude  latitude  housing_median_age  total_rooms  total_bedrooms  \\\n",
+       "0  -0.577689  0.134963            0.568627    -0.955339       -0.960273   \n",
+       "1  -0.575697  0.130712           -0.215686    -0.638995       -0.657045   \n",
+       "2  -0.579681  0.128587            1.000000    -0.925479       -0.941341   \n",
+       "3  -0.581673  0.128587            1.000000    -0.935297       -0.927374   \n",
+       "4  -0.581673  0.128587            1.000000    -0.917341       -0.913408   \n",
+       "\n",
+       "   population  households  median_income  median_house_value  \\\n",
+       "0   -0.982118   -0.958888       0.079337            0.804533   \n",
+       "1   -0.865579   -0.626048       0.076054            0.416493   \n",
+       "2   -0.972365   -0.942115      -0.067944            0.390101   \n",
+       "3   -0.968889   -0.928301      -0.290603            0.345566   \n",
+       "4   -0.968497   -0.915146      -0.538448            0.349277   \n",
+       "\n",
+       "   ocean_proximity_<1H OCEAN  ocean_proximity_INLAND  \\\n",
+       "0                        0.0                     0.0   \n",
+       "1                        0.0                     0.0   \n",
+       "2                        0.0                     0.0   \n",
+       "3                        0.0                     0.0   \n",
+       "4                        0.0                     0.0   \n",
+       "\n",
+       "   ocean_proximity_NEAR BAY  ocean_proximity_NEAR OCEAN  \n",
+       "0                       1.0                         0.0  \n",
+       "1                       1.0                         0.0  \n",
+       "2                       1.0                         0.0  \n",
+       "3                       1.0                         0.0  \n",
+       "4                       1.0                         0.0  "
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_transform = pd.concat([df_scaled, encoded_df], axis=1)\n",
+    "df_transform.head(5)"
    ]
   }
  ],
